# mood-ack

./: .dockerignore  .gitignore  Dockerfile  Justfile  README.md  config.toml  docker-compose.base.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  example.config.toml  pyproject.toml  test.config.toml
.github/workflows/: workflow.yml
deploy/: keycloak.json  nginx.conf  postgres.env  prometheus.yml  rustfs.env
src/prodik/application/: errors.py
src/prodik/application/auth/: __init__.py  change_password.py  login.py  refresh_token.py  register.py  sso.py
src/prodik/application/authorization/: change_password.py  errors.py  login.py  refresh_token.py  register.py  sso.py
src/prodik/application/content_processing/: errors.py  process_file.py  process_raw.py
src/prodik/application/file/: get_file_storage_link.py
src/prodik/application/interfaces/: auth.py  file.py  gateways.py  identity_provider.py  ml.py  password_hasher.py  predicting_model.py  repositories.py  sso.py  task_processor.py  token_manager.py  transaction_manager.py  uow.py
src/prodik/application/manage_profile/: __init__.py  update_profile.py
src/prodik/application/manage_task/: cancel.py  errors.py
src/prodik/application/manage_user/: __init__.py  activate.py  deactivate.py  errors.py
src/prodik/application/receive_model_info/: get_model_info.py
src/prodik/bootstrap/: cli.py  logs.py
src/prodik/infrastructure/: config.py  file_storage_gateway.py  identity_provider.py  password_hasher.py  task_processor.py  token_manager.py  transaction_manager.py  uow.py
src/prodik/presentation/: common.py  root.py
tests/api/: conftest.py
tests/api/root/: test_ping.py
tests/service/: conftest.py  factories.py
tests/service/api/: test_activate_user.py  test_change_password.py  test_deactivate_user.py  test_login.py  test_ping.py  test_refresh.py  test_register.py  test_update_current_profile.py  test_update_profile.py
(+158 files in other folders)
